Fix spacing of stock banner alerts

--- a/stocksearch/src/app/stock-banner/stock-banner.component.css
+++ b/stocksearch/src/app/stock-banner/stock-banner.component.css
@@ -9,10 +9,10 @@
 
 #buy-banner, #watchlist-add-banner, #watchlist-remove-banner {
     display: none;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     text-align: center;
     width: 80%;
 }
